--- a/ECommerce.Web/themes/plugins/jquerylayout/layout-default.css
+++ b/ECommerce.Web/themes/plugins/jquerylayout/layout-default.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+﻿@charset "utf-8";
 /* CSS Document */
 /*
  * Default Layout Theme
@@ -119,7 +119,7 @@ p {
 		padding-bottom: 0.35ex; /* to 'vertically center' text inside text-span */
 	}
 
-.ui-layout-north {
+.ui-layout-south.ui-layout-north {
 	padding: 0px;
 	border-top-style: none;
 	border-right-style: none;
